# metro-eval

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
docs/: conf.py  index.rst  installation.rst  reference.rst  tutorials.rst
docs/_notebooks/: data.ipynb
docs/_templates/: module.rst
src/metro_eval/: __main__.py  anodes.py  calib.py  data.py  fitting.py  norm.py  utils.py
src/metro_eval/cli/metro2hdf/: _index_ascii.pxd  _process_ascii.py  _process_hdf5.py  cli.py
src/metro_eval/cli/sort_events/: cli.py  sorting_tdc.pyx
src/metro_eval/coinc/: interactive.py
src/metro_eval/data/: __init__.py  _load.py  data.py  metro2hdf.py  sort_events.py
src/metro_eval/metro2hdf/: _group_runs.py  _index_ascii.py  _index_metro_files.pyx  _process_ascii.py  _process_hptdc.py  cli.py  glob_metro_files.c  glob_metro_files.h  glob_metro_files.pyx  index_ascii.pxd  index_ascii.py  index_ascii_file_cy.pyx  index_runs.h  index_runs.py  load_from_txt.c  load_from_txt.h  main.py
src/metro_eval/photons/: __init__.py  spectrum.py
src/metro_eval/process/: __init__.py  anodes.py  pifs.py
src/metro_eval/sort_events/: cli.py
tests/: fitting.py
