[build-system]
requires = ["setuptools", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "metro-eval"
dynamic = ["version"]
authors = [
  {name = "Adrian Peter Krone", email= "adrian.krone@physik.uni-kassel.de"},
]
description = "Evaluation utilities for metro data"
readme = "README.rst"
license = "MPL-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "cython>=3.2.0",
    "h5py>=3.13.0",
    "numpy>=1.21",
]

[project.scripts]
metro2hdf = "metro_eval.data.metro2hdf:main"
sort_events = "metro_eval.data.sort_events:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.11",
]
docs = [
    "jupyter>=1.1.1",
    "nbsphinx>=0.9.7",
    "numpydoc>=1.8.0",
    "pandoc>=2.4",
    "sphinx>=7.4.7",
    "sphinx-argparse>=0.4.0",
    "sphinx-autodoc-typehints>=2.3.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
]

[project.urls]
GitHub = "https://github.com/exp4-age/metro-eval"

[tool.setuptools.dynamic]
version = {attr = "metro_eval.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "E7", "E9", "F", "A", "B"]
